--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,37 @@
-# Dependencies
+# Root level ignores for monorepo
 node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Editor directories and files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Logs
+logs
+*.log
+
+# Dependencies
 lerna-debug.log*
 
 # Runtime data
@@ -63,13 +92,6 @@ typings/
 # Yarn Integrity file
 .yarn-integrity
 
-# Environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 .parcel-cache
@@ -93,26 +115,6 @@ public
 tmp/
 temp/
 
-# Logs
-logs
-*.log
-
-# Editor directories and files
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-
-# OS generated files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-
 # Local database files
 *.db
 *.sqlite
@@ -135,9 +137,6 @@ docs/
 
 # Webpack build info
 .webpack/
-
-# ESLint cache
-.eslintcache
 
 # Prettier cache
 .prettiercache
