--- a/yelpcamp-frontend/public/manifest.json
+++ b/yelpcamp-frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "YelpCamp",
-  "name": "YelpCamp - Discover Amazing Campgrounds",
+  "short_name": "The Campgrounds",
+  "name": "The Campgrounds - Discover Amazing Campgrounds",
   "description": "Find and share the best campgrounds around the world. Your outdoor adventure starts here.",
   "icons": [
     {
