--- a/yelpcamp-frontend/package.json
+++ b/yelpcamp-frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yelpcamp-frontend",
+  "name": "the-campgrounds-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
