Enhance SEO and product management features across the application
- Updated SEO_GUIDE.md to include shop page and product detail page optimizations.
- Added a new script command in package.json for enhancing product descriptions.
- Modified server.js to include product data in the sitemap generation, improving search engine visibility for products.
- Redesigned ProductDetail component to feature a dedicated product description card, enhancing user experience and information presentation.

--- a/yelpcamp-backend/package.json
+++ b/yelpcamp-backend/package.json
@@ -10,6 +10,7 @@
     "postinstall": "echo 'Backend dependencies installed successfully'",
     "dev": "nodemon server.js",
     "enhance-descriptions": "node enhance-descriptions.js",
+    "enhance-products": "node enhance-product-descriptions.js",
     "populate-bookings": "node populate-booking-data.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
