--- a/yelpcamp-backend/package.json
+++ b/yelpcamp-backend/package.json
@@ -27,6 +27,8 @@
     "@cloudinary/url-gen": "^1.19.0",
     "@google/generative-ai": "^0.24.1",
     "@mapbox/mapbox-sdk": "^0.16.1",
+    "@modelcontextprotocol/sdk": "^0.5.0",
+    "axios": "^1.6.0",
     "cloudinary": "^1.41.3",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^5.1.0",
